@@ -7,8 +7,10 @@
  */
 package org.dspace.servicemanager;
 
-import java.util.Date;
+import java.lang.ref.Cleaner;
+import java.time.Instant;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicReference;
 import javax.management.Attribute;
 import javax.management.AttributeList;
 import javax.management.AttributeNotFoundException;
@@ -23,6 +25,8 @@ import javax.management.modelmbean.ModelMBeanAttributeInfo;
 import javax.management.modelmbean.ModelMBeanInfoSupport;
 import javax.management.modelmbean.ModelMBeanOperationInfo;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.dspace.kernel.DSpaceKernel;
 import org.dspace.kernel.DSpaceKernelManager;
 import org.dspace.kernel.ServiceManager;
@@ -30,15 +34,13 @@ import org.dspace.servicemanager.config.DSpaceConfigurationService;
 import org.dspace.services.ConfigurationService;
 import org.dspace.services.KernelStartupCallbackService;
 import org.dspace.services.factory.DSpaceServicesFactory;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * This is the kernel implementation which starts up the core of DSpace,
  * registers the mbean, and initializes the DSpace object.
  * It also loads up the configuration.  Sets a JRE shutdown hook.
  * <p>
- * Note that this does not start itself and calling the constuctor does
+ * Note that this does not start itself and calling the constructor does
  * not actually start it up either. It has to be explicitly started by
  * calling the start method so something in the system needs to do that.
  * If the bean is already started then calling start on it again has no
@@ -50,7 +52,25 @@ import org.slf4j.LoggerFactory;
  */
 public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
 
-    private static Logger log = LoggerFactory.getLogger(DSpaceKernelImpl.class);
+    private static final Logger log = LogManager.getLogger();
+
+    /**
+     * Cleaner for Java 21+ compatibility (replaces deprecated finalize() method).
+     * Used to clean up kernel resources if DSpaceKernelImpl is garbage-collected without being properly destroyed.
+     */
+    private static final Cleaner cleaner = Cleaner.create();
+
+    /**
+     * Handle to the registered cleanup action. Used to prevent double-cleanup when destroy() is called normally.
+     */
+    private Cleaner.Cleanable cleanable;
+
+    /**
+     * Holder for the kernel reference, used by the Cleaner.
+     * Using AtomicReference allows the cleanup action to safely access the kernel
+     * without preventing GC of the DSpaceKernelImpl object.
+     */
+    private final AtomicReference<DSpaceKernelImpl> kernelHolder = new AtomicReference<>();
 
     /**
      * Creates a DSpace Kernel, does not do any checks though.
@@ -60,6 +80,9 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
      */
     protected DSpaceKernelImpl(String name) {
         this.mBeanName = DSpaceKernelManager.checkName(name);
+        // Register this kernel with the Cleaner for cleanup if GC'd without proper destruction
+        kernelHolder.set(this);
+        cleanable = cleaner.register(this, new KernelCleanup(kernelHolder));
     }
 
     private String mBeanName = MBEAN_NAME;
@@ -75,7 +98,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
             synchronized (lock) {
                 // No shutdown hook registered yet
                 this.shutdownHook = new Thread() {
-                    public void run() {
+                    @Override public void run() {
                         doDestroy();
                     }
                 };
@@ -86,12 +109,14 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
 
     private ConfigurationService configurationService;
 
+    @Override
     public ConfigurationService getConfigurationService() {
         return configurationService;
     }
 
     private ServiceManagerSystem serviceManagerSystem;
 
+    @Override
     public ServiceManager getServiceManager() {
         return serviceManagerSystem;
     }
@@ -99,6 +124,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
     /* (non-Javadoc)
      * @see org.dspace.kernel.DSpaceKernel#getMBeanName()
      */
+    @Override
     public String getMBeanName() {
         return mBeanName;
     }
@@ -106,6 +132,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
     /* (non-Javadoc)
      * @see org.dspace.kernel.DSpaceKernel#isRunning()
      */
+    @Override
     public boolean isRunning() {
         synchronized (lock) {
             return running;
@@ -115,6 +142,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
     /* (non-Javadoc)
      * @see org.dspace.kernel.CommonLifecycle#getManagedBean()
      */
+    @Override
     public DSpaceKernel getManagedBean() {
         synchronized (lock) {
             return kernel;
@@ -124,6 +152,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
     /* (non-Javadoc)
      * @see org.dspace.kernel.CommonLifecycle#start()
      */
+    @Override
     public void start() {
         start(null);
     }
@@ -141,8 +170,8 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
         }
 
         synchronized (lock) {
-            lastLoadDate = new Date();
-            long startTime = System.currentTimeMillis();
+            lastLoadDate = Instant.now();
+            long startTime = lastLoadDate.toEpochMilli();
 
             // create the configuration service and get the configuration
             DSpaceConfigurationService dsConfigService = new DSpaceConfigurationService(dspaceHome);
@@ -155,7 +184,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
             // initialize the static
 //            DSpace.initialize(serviceManagerSystem);
 
-            loadTime = System.currentTimeMillis() - startTime;
+            loadTime = Instant.now().toEpochMilli() - startTime;
 
             kernel = this;
             running = true;
@@ -170,12 +199,14 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
             // add in the shutdown hook
             registerShutdownHook();
         }
-        log.info("DSpace kernel startup completed in " + loadTime + " ms and registered as MBean: " + mBeanName);
+        log.info("DSpace kernel startup completed in {} ms and registered as MBean: {}",
+                loadTime, mBeanName);
     }
 
     /* (non-Javadoc)
      * @see org.dspace.kernel.CommonLifecycle#stop()
      */
+    @Override
     public void stop() {
         if (!running) {
             //log.warn("Kernel ("+this+") is already stopped");
@@ -234,6 +265,12 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
             }
 
             this.destroyed = true;
+
+            // Clear the holder and unregister the Cleaner to prevent double-cleanup
+            kernelHolder.set(null);
+            if (cleanable != null) {
+                cleanable.clean();
+            }
         }
     }
 
@@ -246,14 +283,35 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
         }
     }
 
-    @Override
-    protected void finalize() throws Throwable {
-        try {
-            doDestroy();
-        } catch (Exception e) {
-            log.error("WARN Failure attempting to cleanup the DSpace kernel: " + e.getMessage(), e);
+    /**
+     * Static cleanup class for use with java.lang.ref.Cleaner (Java 21+ replacement for finalize()).
+     * This class must be static to avoid preventing garbage collection of the DSpaceKernelImpl object.
+     * It holds a reference to the AtomicReference containing the kernel, which is cleared
+     * when destroy() is called normally, preventing double-cleanup.
+     */
+    private static class KernelCleanup implements Runnable {
+        private static final Logger cleanupLog = LogManager.getLogger(KernelCleanup.class);
+        private final AtomicReference<DSpaceKernelImpl> kernelRef;
+
+        KernelCleanup(AtomicReference<DSpaceKernelImpl> kernelRef) {
+            this.kernelRef = kernelRef;
         }
-        super.finalize();
+
+        @Override
+        public void run() {
+            // Get and clear the reference atomically
+            DSpaceKernelImpl kernel = kernelRef.getAndSet(null);
+            if (kernel != null && !kernel.destroyed) {
+                cleanupLog.warn("DSpaceKernelImpl was garbage-collected without being properly destroyed. " +
+                    "Attempting cleanup.");
+                try {
+                    kernel.doDestroy();
+                } catch (Exception e) {
+                    cleanupLog.error("Failure attempting to cleanup the DSpace kernel during GC: {}",
+                        e.getMessage(), e);
+                }
+            }
+        }
     }
 
     @Override
@@ -265,15 +323,15 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
 
     // MBEAN methods
 
-    private Date lastLoadDate;
+    private Instant lastLoadDate;
 
     /**
-     * Time that this kernel was started, as a java.util.Date.
+     * Time that this kernel was started, as an Instant
      *
      * @return date object
      **/
-    public Date getLastLoadDate() {
-        return new Date(lastLoadDate.getTime());
+    public Instant getLastLoadDate() {
+        return lastLoadDate;
     }
 
     private long loadTime;
@@ -287,11 +345,13 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
         return loadTime;
     }
 
+    @Override
     public Object invoke(String actionName, Object[] params, String[] signature)
         throws MBeanException, ReflectionException {
         return this;
     }
 
+    @Override
     public MBeanInfo getMBeanInfo() {
         Descriptor lastLoadDateDesc = new DescriptorSupport(new String[] {"name=LastLoadDate",
             "descriptorType=attribute", "default=0", "displayName=Last Load Date",
@@ -301,7 +361,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
             "getMethod=getLoadTime"});
 
         ModelMBeanAttributeInfo[] mmbai = new ModelMBeanAttributeInfo[2];
-        mmbai[0] = new ModelMBeanAttributeInfo("LastLoadDate", "java.util.Date", "Last Load Date",
+        mmbai[0] = new ModelMBeanAttributeInfo("LastLoadDate", "java.time.Instant", "Last Load Date",
                                                true, false, false, lastLoadDateDesc);
 
         mmbai[1] = new ModelMBeanAttributeInfo("LastLoadTime", "java.lang.Long", "Last Load Time",
@@ -319,6 +379,7 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
         return new ModelMBeanInfoSupport(this.getClass().getName(), "DSpace Kernel", mmbai, null, mmboi, null);
     }
 
+    @Override
     public Object getAttribute(String attribute)
         throws AttributeNotFoundException, MBeanException, ReflectionException {
         if ("LastLoadDate".equals(attribute)) {
@@ -329,16 +390,19 @@ public final class DSpaceKernelImpl implements DSpaceKernel, DynamicMBean {
         throw new AttributeNotFoundException("invalid attribute: " + attribute);
     }
 
+    @Override
     public AttributeList getAttributes(String[] attributes) {
         // TODO Auto-generated method stub
         return null;
     }
 
+    @Override
     public void setAttribute(Attribute attribute) throws AttributeNotFoundException,
         InvalidAttributeValueException, MBeanException, ReflectionException {
         throw new InvalidAttributeValueException("Cannot set attribute: " + attribute);
     }
 
+    @Override
     public AttributeList setAttributes(AttributeList attributes) {
         // TODO Auto-generated method stub
         return null;
